Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -26,10 +26,10 @@
     	    // connected
     	  } else if (response.status === 'not_authorized') {
     	    // not_authorized
-      	    login();
+      	    //login();
     	  } else {
     	    // not_logged_in
-      	    login();
+      	    //login();
     	  }
     	 });
   };
@@ -38,7 +38,7 @@
 	    FB.login(function(response) {
 	        if (response.authResponse) {
 	            // connected
-	        	testAPI();
+	        	//testAPI();
 	        } else {
 	            // cancelled
 	        }
