--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -157,8 +157,7 @@
 <!-- 		Permissions</button> -->
 <!-- 	<button class="btn" id="fb-logout">FB.logout()</button> -->
 
-<button class="btn btn-success" id="fb-login">Login</button>
-
+<input type="button" class="btn-success" id="fb-login" value="login"/>
 
 </body>
 </html>
