Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
 <title>Demo Page for Facebook Login</title>
 </head>
@@ -169,7 +169,10 @@
 <!-- 	<button class="btn" id="fb-logout">FB.logout()</button> -->
 
 <input type="button" class="btn-success" id="fb-login" value="login"/>
-
+<h2>Activity feed</h2>
+        <div class="facebook-plugin">
+          <fb:activity site="winowoman.com" header="false" width="260" height="325" font="arial" border_color="#fff"></fb:activity>
+        </div>
 
 </body>
 </html>
