Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -99,9 +99,9 @@
 <!-- <fb:comments href="http://www.fbrell.com/"></fb:comments> -->
 
 <!-- <script> -->
-//   FB.Event.subscribe('comments.add', function(resp) {
-//     console.log('Comment was added', resp);
-//   });
+<!-- //   FB.Event.subscribe('comments.add', function(resp) { -->
+<!-- //     console.log('Comment was added', resp); -->
+<!-- //   }); -->
 <!-- </script> -->
 
 </body>
