Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -85,7 +85,7 @@
 
 <fb:login-button>Login</fb:login-button>
 
-<!-- <!-- <input type="button" class="btn-success" id="fb-login" value="login"/> --> -->
+<!-- <!-- <input type="button" class="btn-success" id="fb-login" value="login"/> -->
 <!-- <h2>Activity feed</h2> -->
 <!--         <div class="facebook-plugin"> -->
 <!--           <fb:activity site="gaana.com" header="false" width="260" height="325" font="arial" border_color="#fff"></fb:activity> -->
