Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -81,8 +81,8 @@
 
       $.ajax({
           type: "POST",
-          dataType: "json", // what data type to expect from the server
-          url: "/EnrollUser",
+          dataType: "application/text", // what data type to expect from the server
+          url: "http://csaweb-custo.rhcloud.com/EnrollUser",
           data: postdata,
           success: function (data) {
               // do nothing
