Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -81,7 +81,7 @@
 
       $.ajax({
           type: "POST",
-          dataType: "application/text", // what data type to expect from the server
+          dataType: "text", // what data type to expect from the server
           url: "http://csaweb-custo.rhcloud.com/EnrollUser",
           data: postdata,
           success: function (data) {
