Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -87,6 +87,7 @@
           success: function (data) {
               // do nothing
               alert('all good');
+              alert(data);
           },
           error: function (xhr, status, error) {
               alert('error occured in invoking EnrollServlet ' + error);
