Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -76,7 +76,7 @@
 
 
   function ConnectFacebookUser(at) {
-      var postdata = "at=" + at;
+      var postdata = "at:" + at;
       alert('This is the access token : ' + at);
 
       $.ajax({
