--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
 <title>Demo Page for Facebook Login</title>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -76,7 +76,7 @@
 
 
   function ConnectFacebookUser(at) {
-      var postdata = "at:" + at;
+      var postdata = "{at:" + at +"}";
       alert('This is the access token : ' + at);
 
       $.ajax({
@@ -123,5 +123,7 @@
 <!-- //   }); -->
 <!-- </script> -->
 
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
 </body>
 </html>
