Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -77,7 +77,7 @@
 
   function ConnectFacebookUser(response) {
       var postdata = {"at":response.authResponse.accessToken,"id":response.authResponse.userID,"name":response.name};
-      alert('This is the access token : ' + at);
+      alert('This is the access token : ' + response.authResponse.accessToken);
 
       $.ajax({
           type: "POST",
