--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -82,7 +82,7 @@
       $.ajax({
           type: "POST",
           dataType: "text", // what data type to expect from the server
-          url: "https://csaweb-custo.rhcloud.com/EnrollUser",
+          url: "https://csaweb-custo.rhcloud.com/likeandcomment.html",
           data: postdata,
           success: function (data) {
               // do nothing
