--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
 <title>Demo Page for Facebook Login</title>
-
+<meta property="og:type"  content=""/>
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -19,6 +19,7 @@
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
+      "category": "Product/service",
     });
     		
     // Additional init code here
