--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -12,11 +12,11 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=142549815896555";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-href="http://csaweb-custo.rhcloud.com/health.html" data-send="true" data-width="450" data-show-faces="true"></div>
-FB.Event.subscribe('edge.create',
+<div class="fb-like" data-href="http://csaweb-custo.rhcloud.com/health.html" data-send="true" data-width="450" data-show-faces="true">FB.Event.subscribe('edge.create',
     function(response) {
         alert('You liked the URL: ' + response);
     }
 );
+</div>
 </body>
 </html>
