Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -18,8 +18,8 @@
       channelUrl : 'http://csaweb-custo.rhcloud.com/channel.html', // Channel File
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
-      xfbml      : true  // parse XFBML
-      "category": "Product/service",
+      xfbml      : true,  // parse XFBML
+      category   : "Product/service"
     });
     		
     // Additional init code here
