Commit from JBoss Tools

--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -44,7 +44,7 @@
 		    } else {
 		    	console.log('User is logged out');
 		    }
-		  });
+		  },{scope: 'email,user_likes,user_activity'});
 		};
   
   }
