--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -4,6 +4,12 @@
 <head>
 <title>Demo Page for Facebook Login</title>
 <meta property="og:type" content="" />
+<meta property="og:title" content="Customer Sentiment Analysis"/>
+<meta property="og:type" content="Product/Service"/>
+<meta property="og:url" content="http://csaweb-custo.rhcloud.com/health.html"/> <!-- put your site URL here -->
+<meta property="og:site_name" content="CSAWEB"/>
+<meta property="fb:app_id" content="136214289867143"> <!-- Replace app id with your own-->
+<meta property="og:description" content="Share yours likes/comments to get analysed."/>
 </head>
 <body>
 	<div id="fb-root"></div>
