--- a/src/main/webapp/health.html
+++ b/src/main/webapp/health.html
@@ -4,7 +4,7 @@
 <head>
 <title>Demo Page for Facebook Login</title>
 <meta property="og:title" content="Customer Sentiment Analysis"/>
-<meta property="og:type" content="Product/Service"/>
+<meta property="og:type" content="website"/>
 <meta property="og:url" content="http://csaweb-custo.rhcloud.com/health.html"/> <!-- put your site URL here -->
 <meta property="og:site_name" content="CSAWEB"/>
 <meta property="fb:app_id" content="136214289867143"> <!-- Replace app id with your own-->
