--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=ABeeZee:400,400italic">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="formslider.js"></script>
-  <script src="http://malsup.github.com/jquery.form.js"></script> 
+  <script type="text/javascript" src="jquery.form.js"></script> 
 <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -25,7 +25,7 @@
         <h2>Login to the Site</h2>
         <div class="content">
           <a href="#" class="slidelink" id="showregister">Don't Have An Account? &rarr;</a>
-          <form id="login" name="login" action="/HotClinic" method="post">
+          <form id="login" name="login" action="HotClinic" method="post">
             <label for="email">Email Address</label>
             <input type="email" name="email" id="email" class="txtfield" tabindex="1" autocomplete="off">
             
