--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Customer Sentiment Analysis</title>
+  <title>Customer Sentiments Analysis</title>
   <meta name="author" content="Jake Rocheleau">
   <link rel="shortcut icon" href="http://www.templatemonster.com/favicon.ico">
   <link rel="icon" href="http://www.templatemonster.com/favicon.ico">
@@ -18,7 +18,7 @@
 
 <body>
   <div id="w">
-    <h1>Customer Sentiment Analysis Login/Registration Form</h1>
+    <h1>Customer Sentiments Analysis Login/Registration Form</h1>
     
     <div id="page">
       <div id="content-login">
@@ -65,5 +65,6 @@
       
     </div><!-- /end #page -->
   </div><!-- /end #w -->
+  <div id="output1"></div>
 </body>
 </html>
