Commit from JBoss Tools

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
         <h2>Login to the Site</h2>
         <div class="content">
           <a href="#" class="slidelink" id="showregister">Don't Have An Account? &rarr;</a>
-          <form id="login" name="login" action="#" method="post">
+          <form id="login" name="login" action="EnrollUser" method="post">
             <label for="email">Email Address</label>
             <input type="email" name="email" id="email" class="txtfield" tabindex="1" autocomplete="off">
             
