--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,10 +42,10 @@
         <h2>Register a New Account</h2>
         <div class="content">
         <a href="#" class="leftsidelink" id="showlogin">&larr; Already Have an Account? Login Now!</a>
-        <form id="register" name="register" action="EnrollUser?register=true" method="post">
+        <form id="register" name="register" action="EnrollUser" method="post">
           <label for="fname">First Name</label>
           <input type="text" name="fname" id="fname" class="txtfield" tabindex="4" autocomplete="off">
-          
+          <input type="hidden" name="register" value="true" >
           <label for="lname">Last Name</label>
           <input type="text" name="lname" id="lname" class="txtfield" tabindex="5" autocomplete="off">
           
